Updated git ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ box/local.config.yml
 docroot/core
 
 # Ignore paths that contain user-generated content.
-docroot/sites/*/files
+web/sites/*/files
 /files-private
 docroot/sites/*/private
 
