--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: 3fb180f2-c463-4d5a-8d06-fb18f228b254
-name: 'Drush Site-Install'
+name: 'Drupal Theme Practice'
 mail: admin@example.com
 slogan: ''
 page:
